--- a/RDA2_desarrollo/flexbox/css/index.css
+++ b/RDA2_desarrollo/flexbox/css/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: black;
     color:azure;
+    overflow-x: hidden;
 }
 
 h1{
@@ -11,11 +12,11 @@ h1{
     display: flex;
     /* width: fit-content; */
     justify-content: center;
-    align-items: center;
+    align-content: center;
     gap: 10px;
 }
 
-img{
+.imagen_1{
     width: 15%;
     height: 150px;
 }
@@ -37,3 +38,87 @@ p{
     line-break: strict;
     margin: 20px;
 }
+
+.gifimagen{
+    display: flex;
+    justify-content: center;
+}
+
+.heart-beat {
+    font-size: 50px;
+    color: red;
+    text-align: center;
+    animation: heartbeat 1s infinite;
+}
+
+@keyframes heartbeat {
+    0% {
+        transform: scale(1);
+    }
+    25% {
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(1);
+    }
+    75% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.btn{
+    background-color: rgb(82, 8, 8);
+    transition: all;
+    color: aliceblue;
+    padding: 20px;
+    border-radius: 50%;
+    margin: auto;
+}
+
+.gifimagen{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.gifimagen img{
+    animation: bounce 2s infinite;
+    transition: all 0.3s ease;
+}
+
+.gifimagen img:hover{
+    transform: scale(1.1);
+    filter: drop-shadow(0 0 10px #00ff00);
+}
+
+.heart-beat{
+    font-size: 100px;
+    color: red;
+    text-align: center;
+    animation: heartbeat 1s infinite;
+}
+
+@keyframes bounce{
+    0% {
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-20px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
+.boton{
+    display: flex;
+    justify-content: center;
+}
+
+.btn:hover{
+    background-color: red;
+}
+
